--- a/config/database.yml
+++ b/config/database.yml
@@ -12,15 +12,11 @@ development:
   <<: *default
   database: expense_tracker_grape_development
 
-test:
-  <<: *default
+test:  
+  adapter: mysql2
   database: expense_tracker_grape_test
-
-#test:  #Travis CI config
-#  adapter: mysql2
-#  database: myapp_test
-#  username: root
-#  encoding: utf8
+  username: root
+  encoding: utf8
 
 production:
   <<: *default
